# debian-tut

./: README.md
hello01/: yockgen01-dbgsym_0.1-1_amd64.ddeb  yockgen01_0.1-1.dsc  yockgen01_0.1-1_amd64.build  yockgen01_0.1-1_amd64.buildinfo  yockgen01_0.1-1_amd64.changes  yockgen01_0.1-1_amd64.deb
hello01/yockgen01-0.1/debian/: changelog  debhelper-build-stamp  files
hello01/yockgen01-0.1/src/: yockgen
hello02/: yockgen01_0.1-1.debian.tar.xz  yockgen01_0.1-1.dsc  yockgen01_0.1-1_amd64.build  yockgen01_0.1-1_amd64.buildinfo  yockgen01_0.1-1_amd64.changes  yockgen01_0.1-1_amd64.deb
hello02/yockgen01-0.1/: CMakeLists.txt
hello02/yockgen01-0.1/debian/: files
hello02/yockgen01-0.1/obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  app  cmake_install.cmake
patch/: hugin_2019.2.0+dfsg-1build3.debian.tar.xz  hugin_2019.2.0+dfsg-1build3.dsc
patch/hugin-2019.2.0+dfsg/: CMakeLists.txt  Changes.txt  INSTALL_cmake  rev.txt
patch/hugin-2019.2.0+dfsg/CMakeModules/: FindLCMS2.cmake  FindOpenEXR.cmake  win_bundle.cmake
patch/hugin-2019.2.0+dfsg/debian/: README.source  TODO  changelog  control  copyright  hugin-data.install  hugin-tools.install  hugin.NEWS  hugin.install  rules  watch
patch/hugin-2019.2.0+dfsg/debian/patches/: 43_fallbackhelp.patch  series  (+3 more)
patch/hugin-2019.2.0+dfsg/src/translations/: CMakeLists.txt  README.txt  ca_ES.po  ca_ES@valencia.po  cs_CZ.po  da.po  de.po  en_GB.po  es.po  eu.po  extract-messages.pl  extract_user_defined.pl  fi.po  fr.po  hu.po  hugin.pot  it.po  ja.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  zh_CN.po  zh_TW.po
(+65 files in other folders)
